--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           <section class="buttons">
             <button class="btn" id="githubBtn">GitHub</button>
             <button class="btn" id="frontendmentorBtn">Frontend Mentor</button>
-            <button class="btn" id="linkedInBtn">LinekdIn</button>
+            <button class="btn" id="linkedInBtn">LinkedIn</button>
             <button class="btn" id="twitterBtn">Twitter</button>
           </section>
         </main>
